--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 48px;
+  row-gap: 24px;
   max-width: 1440px;
   padding: 100px 156px;
   margin: 0 auto;
@@ -37,12 +37,80 @@
 .gallery-item {
   box-sizing: border-box;
   width: 360px;
-  height: 300px;
+  height: 200px;
 }
 
 .gallery-image {
   width: 360px;
-  height: 300px;
+  height: 200px;
 }
 
 /* Form Styles */
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 100px 156px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-form label {
+  margin-bottom: 8px;
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  row-gap: 8px;
+}
+
+.feedback-form input[name='email'] {
+  height: 40px;
+  padding-left: 12px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.feedback-form textarea[name='message'] {
+  height: 80px;
+  padding-left: 12px;
+  padding-top: 8px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.feedback-form button {
+  margin-top: 8px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background: #4e75ff;
+  border-style: none;
+  color: #fff;
+  margin-right: 265px;
+}
+
+.feedback-form button:hover {
+  background: #6c8cff;
+}
